[tool.poetry]
name = "ldsc2"
version = "0.1.0"
description = "ldsc is a command line tool for computing LD scores, and estimating heritability and genetic correlation from GWAS summary statistics."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^2.7"
bitarray = "^1.2.1"
cython = "^0.29.14"
nose = "^1.3.7"
numpy = "^1.16"
pandas = "^0.24"
pybedtools = "^0.8.1"
scipy = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
